feat: adds total of votes paragraph

--- a/client/style.css
+++ b/client/style.css
@@ -128,3 +128,8 @@ p, h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   text-decoration: none;
 }
+
+.poll__total-votes {
+  color: var(--text);
+  text-align: center;
+}
