--- a/client/style.css
+++ b/client/style.css
@@ -50,7 +50,7 @@ p, h1, h2, h3, h4, h5, h6 {
   padding: 2rem;
   font-family: sans-serif;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
+  border-radius: 32px;
 
   background-color: var(--secondary);
   color: var(--text);
@@ -127,6 +127,7 @@ p, h1, h2, h3, h4, h5, h6 {
   color: var(--secondary);
   font-weight: 700;
   text-decoration: none;
+  font-size: 1.5rem;
 }
 
 .poll__total-votes {
