--- a/client/style.css
+++ b/client/style.css
@@ -18,8 +18,8 @@ body {
   background-color: var(--primary);
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
+  padding: 4rem 2rem;
 }
 
 img, picture, video, canvas, svg {
@@ -56,6 +56,7 @@ p, h1, h2, h3, h4, h5, h6 {
   color: var(--text);
   width: 100%;
   max-width: 700px;
+  margin-block: 2rem;
 }
 
 .poll__title {
@@ -116,11 +117,13 @@ p, h1, h2, h3, h4, h5, h6 {
   font-size: 6rem;
   color: var(--secondary);
   font-weight: 900;
+  text-align: center;
 }
 
 .description {
   font-size: 1.5rem;
   color: var(--secondary);
+  text-align: center;
 }
 
 .portfolio {
