--- a/client/style.css
+++ b/client/style.css
@@ -91,9 +91,11 @@ p, h1, h2, h3, h4, h5, h6 {
 } 
 
 .poll__option-fill {
-  width: 50%;
+  /* width: 50%; */
+  width: 0;
   height: 70px;
   background: #dddddd;
+  transition: width 2s ease;
 }
 
 .poll__option-info {
