--- a/client/style.css
+++ b/client/style.css
@@ -91,11 +91,12 @@ p, h1, h2, h3, h4, h5, h6 {
 } 
 
 .poll__option-fill {
-  /* width: 50%; */
   width: 0;
   height: 70px;
   background: #dddddd;
   transition: width 2s ease;
+  visibility: hidden;
+  /* visibility: visible; */
 }
 
 .poll__option-info {
@@ -139,3 +140,7 @@ p, h1, h2, h3, h4, h5, h6 {
   color: var(--text);
   text-align: center;
 }
+
+/* .show {
+  visibility: visible;
+} */
