--- a/client/style.css
+++ b/client/style.css
@@ -23,6 +23,11 @@ body {
   align-items: center;
   flex-direction: column;
   padding: 4rem 2rem;
+
+  background-image: url("../client/assets/back.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 img,
