--- a/client/style.css
+++ b/client/style.css
@@ -24,7 +24,7 @@ body {
   flex-direction: column;
   padding: 4rem 2rem;
 
-  background-image: url("../client/assets/back.jpg");
+  background-image: url("assets/back.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
