--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,173 @@
-@import './base.css';
+body {
+  font-family: 'Inter', sans-serif;
+  background-color: var(--primary);
+  /* display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 4rem 2rem; */
+
+  /* background-image: url('assets/back.jpg'); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 4rem 2rem;
+}
+
+:root {
+  --primary: #ef233c;
+  --secondary: #ffffff;
+  --text: #484848;
+  --border: #b0b0b0;
+}
+
+.poll {
   padding: 2rem;
-  font-weight: normal;
+  font-family: sans-serif;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  border-radius: 32px;
+
+  background-color: var(--secondary);
+  color: var(--text);
+  width: 100%;
+  max-width: 700px;
+  margin-block: 2rem;
 }
 
-a,
-.green {
+.poll__title {
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+
+.poll__option {
+  border-radius: 16px;
+  border: 1px solid var(--border);
+  overflow: hidden;
+
+  position: relative;
+}
+
+.poll__option:hover {
+  cursor: pointer;
+}
+
+.poll__option:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.poll__option--selected .poll__option-fill {
+  background: #ef233c;
+}
+
+.poll__option--selected .poll__option-info {
+  font-weight: bold;
+}
+
+.poll__option-fill {
+  width: 0;
+  height: 70px;
+  background: #dddddd;
+  transition: width 2s ease;
+  visibility: hidden;
+  /* visibility: visible; */
+}
+
+.poll__option-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+@keyframes movingTiger {
+  0%,
+  30% {
+    transform: perspective(500px) rotateX(0deg) scale(1) translateY(0);
+  }
+  15% {
+    transform: perspective(500px) rotateX(5deg) scale(1.05) translateY(-10px);
+  }
+  30%,
+  100% {
+    transform: perspective(500px) rotateX(0deg) scale(1) translateY(0);
+  }
+}
+
+.tiger-img {
+  max-width: 400px;
+  animation: movingTiger 10s infinite;
+}
+
+.year {
+  font-size: 6rem;
+  color: var(--secondary);
+  font-weight: 900;
+  text-align: center;
+}
+
+.description {
+  font-size: 1.5rem;
+  color: var(--secondary);
+  text-align: center;
+}
+
+.portfolio {
+  color: var(--secondary);
+  font-weight: 700;
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+  font-size: 1.5rem;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+.poll__total-votes {
+  color: var(--text);
+  text-align: center;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
+.poll__percentage {
+  color: var(--text);
+  visibility: visible;
+}
+
+@media (max-width: 768px) {
+  .year {
+    font-size: 3rem;
   }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+  .tiger-img {
+    max-width: 200px;
+  }
+
+  .description {
+    font-size: 1.125rem;
+  }
+
+  .poll {
+    padding: 2rem 1rem;
+  }
+
+  .poll__title {
+    font-size: 1.25rem;
+  }
+
+  .poll__option-info {
+    font-size: 1.25rem;
+    padding: 1rem;
+  }
+
+  .portfolio {
+    font-size: 1.25rem;
   }
 }
