--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -31,6 +31,7 @@ body {
 
   padding: 2rem;
   gap: 2rem;
+  height: 100vh;
 }
 
 .poll {
@@ -148,6 +149,8 @@ body {
   color: var(--secondary);
   font-weight: 700;
   text-decoration: none;
+
+  margin-top: auto;
   /* font-size: 1.5rem; */
 }
 
@@ -248,9 +251,14 @@ body {
 
   .poll {
     padding: 2rem 1rem;
+    font-size: 1rem;
   }
 
   .poll__option-info {
     font-size: 1.25rem;
+  }
+
+  .poll__result {
+    padding: 0.8rem;
   }
 }
