adiciona função que força a animação dos fills acontecerem após um reload

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -273,3 +273,11 @@ body {
   max-width: 300px;
   margin: 0 auto;
 }
+
+.poll__fill {
+  transition: width 1s ease-in-out;
+}
+
+.animate-fill {
+  transition: width 1s ease-in-out;
+}
