--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -19,7 +19,7 @@ body {
   flex-direction: column;
   padding: 4rem 2rem; */
 
-  /* background-image: url('assets/back.jpg'); */
+  background-image: url('/back.jpg');
 }
 
 #app {
